# footprint

./: CMakeLists.txt  README  TODO.txt  empty.cpp  on-file-change.sh  work-live.sh
app/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
app/app_root/messages/: email.xml
app/doc_root/css/: footprint.css
app/doc_root/images/: CMakeLists.txt
app/tests/: CMakeLists.txt  test_app.cpp
app/widgets/: Auth.cpp  Auth.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
app/widgets/widgets/: CMakeLists.txt  MainWindow.cpp
cmake/: test_funcs.cmake
etc/: CMakeLists.txt  footprint_cfg.xml.in
lib/wittyPlus/: App.cpp  App.hpp  Auth.cpp  Auth.hpp  CMakeLists.txt  Server.cpp  Server.hpp  Server_auth.hpp  Services.cpp  Services.hpp  Session.cpp  Session.hpp  Session_impl.hpp  SubDivided.cpp  SubDivided.hpp  Urls.cpp  Urls.hpp  Urls_impl.cpp  Urls_impl.hpp  User.hpp  exceptions.hpp
lib/wittyPlus/base_db/: CMakeLists.txt  base_db.hpp  base_db_postgres.cpp  base_db_sqlite.cpp
lib/wittyPlus/tests/: CMakeLists.txt  Testing.hpp  testSubDivided.cpp  test_sub_divided.cpp  test_urls.cpp  test_urls_basic.cpp
share/footprint/: App.hpp  Auth.cpp  Auth.hpp  CMakeLists.txt  Colors.cpp  Colors.hpp  Server.cpp  Server.hpp  Server_auth.hpp  Session.cpp  Session.hpp  Session_impl.hpp  main.cpp
share/footprint/app_root/: CMakeLists.txt
share/footprint/app_root/messages/: MainWindow.xml
share/footprint/db/: Product.hpp  User.hpp
share/footprint/doc_root/: CMakeLists.txt
share/footprint/doc_root/css/: footprint.css
site/: App.hpp  CMakeLists.txt  debug.sh  run.sh  run.sh.in  wt_config.xml.in
site/images/: CMakeLists.txt
site/messages/: MainWindow.xml
site/widgets/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
src/: App.hpp  CMakeLists.txt  main.cpp
widgets/: Auth.cpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
